2010-04-30  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #11587: set proper default timezone (fixes PHP 5.3 warnings concerning missing timezone settings)

2010-04-30  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #13758: page.jsInline / page.jsFooterInline may fail with config.removeDefaultJS=external (thanks to Steffen Ritter)

2010-04-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14254: Fresh install does not redirect to Install Tool when mysql is not available

2010-04-30  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14222: Notice undefined index in tslib_pibase.php (Thanks to Martin Müller)
	* Fixed bug #14220: Notice undefined index in t3lib_div::_GPmerged() (Thanks to Martin Müller)
	* Fixed bug #14256: tslib_cObj has two test case files (Thanks to Oliver Klee)

2010-04-30  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14079: Running the unit tests floods the deprecation log (thanks to Oliver Klee)
	* Fixed bug #11811: Raise versions and states of sysexts (stable <-> 1.0.0) (thanks to Steffen Gebert)
	* Fixed bug #14179: TCA select doesn't show record titles whic start with <= (thanks to Georg Ringer)

2010-04-30  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9758: Write Configuration to extTables.php
	* Fixed bug #14212: Better styling of BE login news (thanks to Georg Ringer)
	* Fixed bug #14116: Selecting/deselecting all records does not work with translated records (thanks to Reinhard Führicht)

2010-04-29  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #11005: Browse Links Popup shows no files when all file types are allowed

2010-04-29  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14151: Shortcuts broken, if in user or admin tools modules (thanks to Stefan Galinski)

2010-04-29  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14207: Duplicate submodule URL in JavaScript