@@ -1,6 +1,7 @@
 2010-04-30  Tobias Liebig  <mail_typo3@etobi.de>
 
 	* Fixed bug #11587: set proper default timezone (fixes PHP 5.3 warnings concerning missing timezone settings)
+	* Fixed bug #3800: Improve warning about empty reference index table (thanks to Michael Knabe)
 
 2010-04-30  Jeff Segars  <jeff@webempoweredchurch.org>
 
